--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
     </div>
     <br>
 	
-    <footer>Modified from <a href= "https://gcalmettes.github.io/projects/" target= "_Blank">GCALMETTES</a> | Copyright (c) 2018.</footer>
+    <footer>
+	    <span>Modified from <a href= "https://gcalmettes.github.io/projects/" target= "_Blank">GCALMETTES</a> | Copyright (c) 2018.</span>
+	    <span>Scientific collaboration network between Tarling, Vallim, and the broader scientific community.</span>
+    </footer>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="src/js/utils.js"></script>
